[package]
name = "db_reader"
version = "0.1.0"
edition = "2024"

[dependencies]
rocksdb = { version = "0.23.0", optional = true }
rlimit = { version = "0.10.2", optional = true }
jsonrpsee = { version = "0.25.1", features = [
    "server",
    "client",
    "macros",
    "jsonrpsee-core",
    "jsonrpsee-types",
] }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.2", features = ["auth", "compression-br", "compression-gzip", "cors", "set-header"], optional = true }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "signal"], optional = true }
hyper = { version = "1.5.2", features = ["client", "http2"], optional = true }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http2", "tokio"], optional = true }
serde = { version = "1.0.137", features = ["derive"] }
hex = { version = "0.4.3", optional = true }
serde-hex = { version = "0.1.0", optional = true }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
bitcoin = { version = "0.32.5", features = ["rand"], optional = true }
ctrlc = { version = "3.4.7", optional = true }
signal-hook = { version = "0.3.18", optional = true }

[features]
default = ["server"]
server = [
    "bitcoin",
    "ctrlc",
    "hex",
    "signal-hook",
    "rocksdb",
    "rlimit",
    "tower",
    "tower-http",
    "tokio",
    "hyper",
    "hyper-util",
    "serde-hex",
]

[[bin]]
name = "db_reader"
path = "src/bin/main.rs"
required-features = ["server"]
