[package]
name = "brc20-index"
version = "2.0.10"
edition = "2024"

[dependencies]
axum = "0.8.7"
axum-server = "0.8.0"
base64 = "0.22.1"
bitcoin = "0.32.8"
brc20-prog = { version = "0.15.9", default-features = false }
db_reader = { path = "../../ord/db_reader", default-features = false }
dotenvy = "0.15.7"
hex = "0.4.3"
jsonrpsee = { version = "0.26.0", features = ["client", "http-client", "tokio"] }
lazy_static = "1.5.0"
num-traits = "0.2.19"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.12.26", features = ["json"] }
rust-embed = "8.9.0"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
serde_with = "3.16.1"
sha256 = "1.6.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "bigdecimal", "time", "tls-rustls"] }
tokio = { version = "1.48.0", features = ["rt", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
versions = "7.0.0"
