[package]
name = "brc20-index"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bitcoin = "0.32.6"
brc20-prog = { path = "../../../brc20-programmable-module"}
dotenvy = "0.15.7"
hex = "0.4.3"
jsonrpsee = { version = "0.25.1", features = ["client", "tokio"] }
lazy_static = "1.5.0"
num-traits = "0.2.19"
reqwest = { version = "0.12.15", features = ["json"] }
rust-embed = "8.7.2"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
serde_with = "3.12.0"
sha256 = "1.6.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "bigdecimal", "time"] }
tokio = { version = "1.45.0", features = ["rt", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
